nouvelles images matériel

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -464,6 +464,10 @@ const data = await getCollection("videos");
             <img src="/website/close_mic_green.jpg" alt="Prise de son" />
             <div class="caption">Prise de son</div>
           </div>
+          <div class="studio-item">
+            <img src="/website/bureau_large.jpg" alt="Bureau Studio" />
+            <div class="caption">Bureau Studio</div>
+          </div>
         </div>
 
         <!-- Bouton voir plus -->
@@ -547,8 +551,8 @@ const data = await getCollection("videos");
 
       <!-- Images équipement -->
       <div class="materiel-images instrument-carousel">
-        <img src="/website/studio_large_portrait.jpg" alt="Microphones de studio" />
-        <img src="/website/piano_close.jpg" alt="Setup d'enregistrement" />
+        <img src="/website/hardware_close_blur.jpg" alt="Studio Hardware" />
+        <img src="/website/soyuz_013_close.jpg" alt="Micros Soyuz" style="object-position: 50% 25%;" />
         <img src="/website/fader.jpg" alt="Amplis Orange" />
       </div>
 
@@ -556,10 +560,11 @@ const data = await getCollection("videos");
       <div class="materiel-category instruments">
         <h2>Instruments</h2>
         <div class="instrument-group">
-          <h3>Claviers / Piano</h3>
+          <h3>Guitars / Basses</h3>
           <ul>
-            <li>Gunther Piano droit</li>
-            <li>Yamaha CK61</li>
+            <li>Marcus Miller V7 Swamp Ash NT</li>
+            <li>Epiphone Guitare folk</li>
+            <li>Paul Beuscher 1950 Guitare classique</li>
           </ul>
         </div>
 
@@ -573,10 +578,10 @@ const data = await getCollection("videos");
         </div>
 
         <div class="instrument-group">
-          <h3>Guitars / Basses</h3>
+          <h3>Claviers / Piano</h3>
           <ul>
-            <li>Marcus Miller V7 Swamp Ash NT</li>
-            <li>Epiphone Guitare folk</li>
+            <li>Gunther Piano droit</li>
+            <li>Yamaha CK61</li>
           </ul>
         </div>
 
@@ -618,9 +623,9 @@ const data = await getCollection("videos");
 
       <!-- Images équipement 2 -->
       <div class="materiel-images-bottom instrument-carousel">
-        <img src="/website/piano1.jpg" alt="Piano de studio" />
-        <img src="/website/machine_patchbay.jpg" alt="Batterie studio" />
-        <img src="/website/oc818.jpg" alt="Amplis guitare" />
+        <img src="/website/piano_close_right.jpg" alt="Piano du studio" />
+        <img src="/website/deepmind_close.jpg" alt="Synthé deepmind" style="object-position: 50% 90%;" />
+        <img src="/website/guitare_acoustique.jpg" alt="Guitare acoustique" style="object-position: 50% 40%;"/>
       </div>
     </div>
   </div>
